text alignment fixed

--- a/src/pages/StartTest/StartTest.scss
+++ b/src/pages/StartTest/StartTest.scss
@@ -59,6 +59,7 @@
   @include md {
     flex-direction: row;
     justify-content: space-between;
+    text-align: left;
   }
 }
 
